--- a/res_compare/Pipfile
+++ b/res_compare/Pipfile
@@ -1,7 +1,7 @@
 [[source]]
-url = "https://pypi.org/simple"
+name = "tsinghua"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
 verify_ssl = true
-name = "pypi"
 
 [packages]
 mysqlclient = "==1.4.2"
