--- a/res_compare/Pipfile
+++ b/res_compare/Pipfile
@@ -14,7 +14,7 @@ pyyaml = "==6.0"
 allure-behave = "==2.13.2"
 lxml = "==4.9.2"
 pip = "==23.1.2"
-"mysql.connector" = "==2.2.9"
+mysql-connector-python = "==8.0.11"
 
 [dev-packages]
 
